# Market-Sentiment-Analysis-for-Investors-

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  apply_checkpoint_fixes.py  check_syntax.py  comprehensive_fix.py  comprehensive_fix_all.py  final_comprehensive_fix.py  final_fix.py  fix_all_complete.py  fix_all_files.py  fix_all_remaining.py  fix_all_syntax.py  fix_dashboard_app.py  fix_round_3.py  fix_round_4.py  fix_round_5_complete.py  main.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  test_all_files.py
.github/workflows/: python-ci.yml
config/: config.py
examples/: batch_analysis.py  quick_start.py
src/dashboard/: app.py
src/dashboard/templates/: dashboard.html
src/data_ingestion/: base_connector.py  ingestion_manager.py  market_connector.py  news_connector.py  social_connector.py
src/fusion/: feature_engineer.py  fusion_manager.py  lstm_model.py
src/pipeline/: stream_processor.py
src/preprocessing/: bot_detector.py  ner_extractor.py  text_cleaner.py
src/sentiment/: ensemble_analyzer.py  finbert_analyzer.py  lexicon_analyzer.py
src/utils/: model_retrainer.py
tests/: conftest.py  test_data_ingestion.py  test_sentiment_analysis.py
