[build-system]
requires = [
    "setuptools>=65.0.0",
    "wheel",
    "cython>=0.29.33"
]
build-backend = "setuptools.build_meta"

[project]
name = "market-sentiment-analysis"
version = "0.1.0"
description = "Advanced Market Sentiment Analysis System for Investors"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
    "torch>=2.2.0",  # Newer version with Python 3.13 support
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",  # Version with Python 3.13 support
    "scipy>=1.11.0",  # Version with Python 3.13 support
    "yfinance>=0.2.18",
    "alpha-vantage>=2.3.1",
    "fredapi>=0.5.0",
    "newsapi-python>=0.2.6",
    "tweepy>=4.14.0",
    "spacy>=3.7.0,<4.0.0",
    "nltk>=3.8.1,<4.0.0",
    "textblob>=0.17.1,<0.18.0",
    "vaderSentiment>=3.3.2,<4.0.0",
    "tensorflow>=2.13.0",
    "keras>=2.13.1",
    "kafka-python>=2.0.2",
    "redis>=4.5.0",
    "celery>=5.3.0"
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pip-tools>=7.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",  # Modern replacement for flake8
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-copybutton>=0.5.0",
    "myst-parser>=2.0.0",
    "jupyter>=1.0.0",
    "types-requests>=2.31.0",
    "typing-extensions>=4.8.0"
]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py", "**/tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]
